cabal-version: 2.2
name: reflex-iso
version: 0.0.1
build-type: Simple

common deps
  build-depends:
    base,
    aeson,
    aeson-gadt-th,
    bytestring,
    containers,
    ghcjs-dom,
    reflex-dom,
    text,
  ghc-options: -Wall
  default-language: Haskell2010

library
  import: deps
  exposed-modules:
    Common
  hs-source-dirs: src/common

executable server
  import: deps
  if impl(ghcjs) 
    buildable: False
  main-is: Server.hs
  hs-source-dirs: src/server
  build-depends:
    reflex-iso,
    async,
    http-types,
    jsaddle-warp,
    wai,
    wai-middleware-static,
    wai-websockets,
    warp,
    websockets

executable client
  import: deps
  main-is: Main.hs
  hs-source-dirs: src/client
  build-depends:
    reflex-iso